# LiftingTwin

./: .gitignore  AGENTS.md  INIT_CHECKLIST.md  README.md  ros2_tcp_relay.py
.claude/: settings.json
Assets/Art/Shaders/: PointCloud.shader
Assets/Editor/: CreateMaterials.cs
Assets/Resources/: Mat_Gray.mat  Mat_Ground.mat  Mat_Orange.mat  Mat_Steel.mat  ROSConnectionPrefab.prefab
Assets/Scripts/: LiftingTwin.asmdef  RosSubscriberTest.cs
Assets/Scripts/Core/: AppBootstrap.cs  AppConfig.cs
Assets/Scripts/Mesh/: DynamicMesh.cs  MeshFrame.cs  MeshManager.cs  MeshManagerView.cs  MeshTestAnimator.cs  MeshTestController.cs  MeshView.cs  ProceduralCrane.cs  ProceduralTower.cs
Assets/Scripts/Network/: QtBridge.cs  RosSubscriberTest.cs
Assets/Scripts/PointCloud/: PointCloudFrame.cs  PointCloudRenderer.cs  PointCloudSubscriber.cs  PointCloudTestController.cs  PointCloudView.cs
Assets/Scripts/Runtime/: SceneInitializer.cs
Assets/Scripts/UI/: SelectionManager.cs  UIManager.cs
Assets/Scripts/Utils/: Log.cs  MainThreadDispatcher.cs
Assets/Scripts/Visualization/: CameraConfig.cs  CameraController.cs  FreeCameraView.cs
Assets/Tests/Editor/: CameraControllerTests.cs  DynamicMeshTests.cs  LiftingTwin.Tests.Editor.asmdef
Assets/_Config/: AppConfig.asset
Assets/_Scenes/: MainScene.unity
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset
QtUI/: CMakeLists.txt  CameraImageProvider.cpp  CameraImageProvider.h  CameraStreamClient.cpp  CameraStreamClient.h  QtRosBridge.h  RosBridgeSubscriber.cpp  RosBridgeSubscriber.h  debug_run.bat  launch.bat  main.cpp  run.bat  run_app.bat  run_main.bat  run_ui.bat  setup_and_build.bat
QtUI/qml/: RiskEventArchivePanel.qml  SystemMonitor.qml  TrajectoryPrediction.qml  TrolleyControl.qml  main.qml  qmldir
QtUI/qml/components/: AlarmList.qml  BottomPanel.qml  CenterView.qml  CraneStatus.qml  EquipmentList.qml  EventTable.qml  LeftPanel.qml  ModelLayers.qml  PersonnelList.qml  RightPanel.qml  RiskPanel.qml  SensorStatus.qml  StatusCard.qml  TopBar.qml
docs/: data-pipeline-guide.md  hik-camera-integration-guide.md  ros2-setup-guide.md
